INTYGFV-16782: Use react error pages for failures in deep integration 'uthopp'